# hog-uploader

./: .gitignore  README.md  pyproject.toml  test_youtube.ipynb  testing.ipynb
hog_uploader/: file_utils.py  hog_uploader.py  main.py  video.py  video_manager.py  youtube_uploader_service.py  yt_upload_utils.py
tests/: conftest.py  test_hog_uploader.py  test_video.py  test_video_manager.py  test_youtube_uploader_service.py
