[tool.poetry]
name = "hog-uploader"
version = "0.1.0"
authors = ["me"]
description = ""
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
ipykernel = "^6.19.4"
google-api-python-client = "^2.71.0"
oauth2client = "^4.1.3"
google-auth-oauthlib = "^0.8.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hog = "hog_uploader.main:main"
